src/css-components/Qualifications.module.css
.qualifications {
    /* font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
    font-family: 'Flabstick', monospace;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 20px;
    /* border-bottom: solid red 5px; */
    padding-top: 105px;
    box-sizing: border-box;
    padding-bottom: 6vh;
    position: sticky;
    top: 0;
    background-image: url('../assets/background-images/paper-texture.jpg')
}

.mainHeading {
    font-size: calc(5vh + 2.5vw);
}

/*************************************************************/
/************** TIMELINE STYLES BELOW ************************/

.timelineContainer {
    height: 60vh;
    /* border:solid red 4px; */
    /* width: 100vw; */
    overflow-x: auto;
    white-space: nowrap;

    /* Hide scrollbar */
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE and Edge */
}
.timelineContainer::-webkit-scrollbar {
  display: none; /* Chrome, Safari, newer Edge */
}


.timelineList {
    display: flex;
    list-style-type: none;
    padding-left: 50vw;
    height: 100%;
}

.timelineList > li {
    flex-shrink: 0;
}

/********* GENERAL STYLING  ********/
.horizontalStyling {
    border: solid black 2px;
}

.sampleImageStyling {
    height: 25px;
    width: 25px;
    border-radius: 50%;
    background-color: black;
}

.timelineContent {
    opacity: 0;
    transition: opacity 0.7s ease-out,
    transform 0.5s cubic-bezier(.53,.82,.66,2.04);
}

.timelineContent > .degreeHeading {
    font-size: calc(7vh);
}

.oddItem > .timelineContent {
    transform: translateY(80px);
}

.evenItem > .timelineContent {
    transform: translateY(-80px);
}

.timelineContent.fadeIn {
    opacity: 1;
    transform: translateY(0px);
}

/********* FIRST LIST ITEM STUFF ONLY ************/
.firstListItem {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr auto 1fr;
    width: fit-content;
    justify-items: start;
    gap: 0;
}

.firstListItem .sampleImage {
    grid-column: 1;
    grid-row: 2;
}

.firstHorizontalLine {
    grid-column: 2;
    grid-row: 2;
    width: 100%;
    align-self: center;
}

.firstListItem .timelineContent {
    grid-column: 1 / span 2;
    grid-row: 1;
}


/******************** GENERAL LIST ITEMS ********************/

.listItem {
    display: grid;
    grid-template-columns: auto auto 1fr;
    grid-template-rows: 1fr auto 1fr;
    width: fit-content;
    justify-items: start;
    gap: 0;
}

.beforeHrLine {
    grid-column: 1;
    grid-row: 2;
    width: 50px; /************* INCREASE THIS TO INCREASE SPACING BETWEEN TIMELINE *********/
    align-self: center;
}

.afterHrLine {
    grid-column: 3;
    grid-row: 2;
    width: 100%;
    align-self: center;
}

.sampleImage {
    grid-column: 2;
    grid-row: 2;
}

.timelineContent {
    grid-column: 2 / span 2;
}

/************ ODD AND EVEN DIFFERENCES *************/

.evenItem .timelineContent{
    grid-row: 3;
    padding-top: 3vh;
}

.oddItem .timelineContent {
    grid-row: 1;
    padding-bottom: 3vh;
    align-self: end;
}

